tests/paczka1/small_fuzzy/31706021.err
Error in line 9: iTvcWC A488 55,3
Error in line 5: jrRCg4xwu S828 75,6
Error in line 14: iTvcWC S828 18,48
Error in line 11: iTvcWC S828 68,5
